--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -947,7 +947,7 @@ section#dashboard-page-book-edit {
       justify-content: center;
       width: 50%;
 
-      textarea#work-extract {
+      textarea#work-extract-edit{
         width: 690px;
         height: 600px;
         font-size: 20px;
